--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -706,6 +706,7 @@ article.article--career ul li {
   width: 100%;
   height: auto;
   padding: 20px 0;
+  z-index: 100;
 }
 .header__wrapper .header {
   width: 1100px;
@@ -1053,6 +1054,7 @@ button.newsletter--btn:hover, a.newsletter--btn:hover {
   padding: 5px;
   border-radius: 10px;
   background: rgba(0, 0, 0, 0.1);
+  z-index: 21;
 }
 .pagination__page ul.pagination__page--ul li.pagination__page--li {
   list-style: none;
@@ -1082,67 +1084,85 @@ button.newsletter--btn:hover, a.newsletter--btn:hover {
   background: #fff;
 }
 
-.page1__wrapper, .page2__wrapper, .page3__wrapper, .page4__wrapper, .page5__wrapper {
-  display: block;
+.ss__page {
+  max-width: 180px;
+  height: 200px;
+  top: 50%;
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  right: 50%;
+  left: 50%;
+}
+.ss__page1 {
+  background-image: "assets/images/frame_page1.png" no-repeat;
+}
+
+.page1__wrapper, .page2__wrapper, .page4__wrapper, .page3__wrapper, .page5__wrapper {
+  position: relative;
   min-width: 100%;
-  height: 100vh;
+  height: 100vh !important;
   margin: 0 0 0 0;
   text-align: center;
   background: url("../images/page1--bg.jpg") no-repeat;
-  background-attachment: fixed;
-  background-position: top center;
-  background-size: cover;
+  background-attachment: fixed !important;
+  background-position: top center !important;
+  background-size: cover !important;
   background-color: #ff6633;
 }
-.page1__wrapper .page1, .page2__wrapper .page1, .page3__wrapper .page1, .page4__wrapper .page1, .page5__wrapper .page1, .page2__wrapper .page2, .page3__wrapper .page3, .page4__wrapper .page4, .page5__wrapper .page5 {
+.page1__wrapper .page1, .page2__wrapper .page1, .page4__wrapper .page1, .page3__wrapper .page1, .page5__wrapper .page1, .page2__wrapper .page2, .page4__wrapper .page2, .page4__wrapper .page4, .page3__wrapper .page3, .page5__wrapper .page5 {
   display: inline-block;
   width: 1100px;
   margin: 20vh auto 0 auto;
   text-align: left;
 }
-.page1__wrapper .page1 .description__page, .page2__wrapper .page1 .description__page, .page3__wrapper .page1 .description__page, .page4__wrapper .page1 .description__page, .page5__wrapper .page1 .description__page, .page2__wrapper .page2 .description__page, .page3__wrapper .page3 .description__page, .page4__wrapper .page4 .description__page, .page5__wrapper .page5 .description__page {
+.page1__wrapper .page1 .description__page, .page2__wrapper .page1 .description__page, .page4__wrapper .page1 .description__page, .page3__wrapper .page1 .description__page, .page5__wrapper .page1 .description__page, .page2__wrapper .page2 .description__page, .page4__wrapper .page2 .description__page, .page4__wrapper .page4 .description__page, .page3__wrapper .page3 .description__page, .page5__wrapper .page5 .description__page {
   display: inline-block;
-  float: left;
-  width: 58%;
 }
-.page1__wrapper .page1 .description__page h1, .page2__wrapper .page1 .description__page h1, .page3__wrapper .page1 .description__page h1, .page4__wrapper .page1 .description__page h1, .page5__wrapper .page1 .description__page h1, .page2__wrapper .page2 .description__page h1, .page3__wrapper .page3 .description__page h1, .page4__wrapper .page4 .description__page h1, .page5__wrapper .page5 .description__page h1 {
+.page1__wrapper .page1 .description__page h1, .page2__wrapper .page1 .description__page h1, .page4__wrapper .page1 .description__page h1, .page3__wrapper .page1 .description__page h1, .page5__wrapper .page1 .description__page h1, .page2__wrapper .page2 .description__page h1, .page4__wrapper .page2 .description__page h1, .page4__wrapper .page4 .description__page h1, .page3__wrapper .page3 .description__page h1, .page5__wrapper .page5 .description__page h1 {
   color: #fff;
   text-shadow: 0px 1px 3px #777;
 }
-.page1__wrapper .page1 .description__page h1 font, .page2__wrapper .page1 .description__page h1 font, .page3__wrapper .page1 .description__page h1 font, .page4__wrapper .page1 .description__page h1 font, .page5__wrapper .page1 .description__page h1 font, .page2__wrapper .page2 .description__page h1 font, .page3__wrapper .page3 .description__page h1 font, .page4__wrapper .page4 .description__page h1 font, .page5__wrapper .page5 .description__page h1 font {
+.page1__wrapper .page1 .description__page h1 font, .page2__wrapper .page1 .description__page h1 font, .page4__wrapper .page1 .description__page h1 font, .page3__wrapper .page1 .description__page h1 font, .page5__wrapper .page1 .description__page h1 font, .page2__wrapper .page2 .description__page h1 font, .page4__wrapper .page2 .description__page h1 font, .page4__wrapper .page4 .description__page h1 font, .page3__wrapper .page3 .description__page h1 font, .page5__wrapper .page5 .description__page h1 font {
   color: #ff6633;
   font-weight: 800;
   text-decoration: underline;
   text-shadow: 0px 1px 1px #000;
 }
-.page1__wrapper .page1 .description__page p, .page2__wrapper .page1 .description__page p, .page3__wrapper .page1 .description__page p, .page4__wrapper .page1 .description__page p, .page5__wrapper .page1 .description__page p, .page2__wrapper .page2 .description__page p, .page3__wrapper .page3 .description__page p, .page4__wrapper .page4 .description__page p, .page5__wrapper .page5 .description__page p {
+.page1__wrapper .page1 .description__page p, .page2__wrapper .page1 .description__page p, .page4__wrapper .page1 .description__page p, .page3__wrapper .page1 .description__page p, .page5__wrapper .page1 .description__page p, .page2__wrapper .page2 .description__page p, .page4__wrapper .page2 .description__page p, .page4__wrapper .page4 .description__page p, .page3__wrapper .page3 .description__page p, .page5__wrapper .page5 .description__page p {
   width: 90%;
   text-shadow: 0px 1px 3px #444;
 }
-.page1__wrapper .page1 .ss__page, .page2__wrapper .page1 .ss__page, .page3__wrapper .page1 .ss__page, .page4__wrapper .page1 .ss__page, .page5__wrapper .page1 .ss__page, .page2__wrapper .page2 .ss__page, .page3__wrapper .page3 .ss__page, .page4__wrapper .page4 .ss__page, .page5__wrapper .page5 .ss__page {
-  display: inline-block;
-  float: right;
-  text-align: center;
-  width: 42%;
-  margin: 6vh 0 0 0;
-}
-.page1__wrapper .page1 .ss__page img, .page2__wrapper .page1 .ss__page img, .page3__wrapper .page1 .ss__page img, .page4__wrapper .page1 .ss__page img, .page5__wrapper .page1 .ss__page img, .page2__wrapper .page2 .ss__page img, .page3__wrapper .page3 .ss__page img, .page4__wrapper .page4 .ss__page img, .page5__wrapper .page5 .ss__page img {
-  max-width: 100%;
-  height: auto;
-}
 
-.page2__wrapper {
+.page2__wrapper, .page4__wrapper {
   min-width: 100%;
   height: 100vh;
   background: #fff;
 }
-.page2__wrapper .page2 .description__page h1 {
+.page2__wrapper .page2 .description__page h1, .page4__wrapper .page2 .description__page h1, .page4__wrapper .page4 .description__page h1 {
   color: #424242;
-  text-shadow: 0px 1px 3px #777;
+  text-shadow: none;
+}
+.page2__wrapper .page2 .description__page p, .page4__wrapper .page2 .description__page p, .page4__wrapper .page4 .description__page p {
+  color: #797970;
+  text-shadow: none;
 }
 
 .page3__wrapper {
   background: #ff6633;
+}
+.page3__wrapper .page3 .description__page h1 {
+  color: #424242;
+  text-shadow: none;
+}
+.page3__wrapper .page3 .description__page h1 font {
+  color: #fff;
+}
+.page3__wrapper .page3 .description__page p {
+  color: #6B2A11;
+  text-shadow: none;
 }
 
 .page4__wrapper {
@@ -1151,6 +1171,9 @@ button.newsletter--btn:hover, a.newsletter--btn:hover {
 
 .page5__wrapper {
   background: #272625;
+}
+.page5__wrapper .page5 .description__page p {
+  color: #797970;
 }
 
 /** responsive **/
@@ -1167,14 +1190,6 @@ button.newsletter--btn:hover, a.newsletter--btn:hover {
  *
  * Copyright (C) 2013 alvarotrigo.com - A project by Alvaro Trigo
  */
-html, body {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  /*Avoid flicker on slides transitions for mobile phones #336 */
-  -webkit-tap-highlight-color: transparent;
-}
-
 #superContainer {
   height: 100%;
   position: relative;
@@ -1272,7 +1287,10 @@ html, body {
   margin-top: -32px;
   top: 50%;
   opacity: 1;
+  padding: 5px 0;
+  border-radius: 15px;
   -webkit-transform: translate3d(0, 0, 0);
+  background: rgba(0, 0, 0, 0.1) !important;
 }
 
 #fp-nav.right {
@@ -1464,6 +1482,12 @@ body {
   padding: 0;
   width: 100%;
   min-height: 100%;
+}
+.container .main__Wrapper {
+  position: relative;
+}
+.container .main__Wrapper .main {
+  position: relative;
 }
 
 /** responsive **/
