--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -8,6 +8,7 @@
 	padding:5px;
 	border-radius:10px;
 	background: rgba(0,0,0,0.1);
+	z-index:21;
 		ul.pagination__page--ul{
 				li.pagination__page--li{
 					list-style: none;
@@ -44,19 +45,64 @@
 				}
 		}
 }
-
+.ss__page{
+	max-width:180px;
+	height:200px;
+	top:50%;
+	@include transform (translate(-50%, -50%));
+	right:50%; left:50%;
+		&1{
+			background-image:("assets/images/frame_page1.png") no-repeat;			
+		}
+}
+// .ss__wrapper{					
+// 		.ss__page{
+// 			position: fixed;
+// 			// width: 100vw !important;
+// 			// height:100vh !important;
+// 			width:42%;
+// 			margin:0 0 0 0;
+// 			top: 50%;
+// 			@include transform (translate(-50%, -50%));
+// 			right:50%;left:50%;	
+// 			// z-index:61;
+// 			background-attachment: fixed !important;
+// 			background-position: top center !important; 
+// 			background-size: cover !important;		
+// 				// &1{
+// 				// 	z-index: 11;
+// 				// }
+// 				// &2{
+// 				// 	z-index: 21;
+// 				// }
+// 				// &3{
+// 				// 	z-index: 31;
+// 				// }
+// 				// &4{
+// 				// 	z-index: 41;
+// 				// }
+// 				// &5{
+// 				// 	z-index: 51;
+// 				// }
+// 				img{
+// 					max-width:100%;
+// 					height:auto;
+// 				}
+// 		}
+// }
 .page1__wrapper{
-	display: block;
+	position: relative;
 	min-width:100%;
-	height:100vh;
+	height:100vh !important;
 	margin:0 0 0 0;
 	text-align:center;
 	// border-bottom:0vh solid #fff;
 	background:url("../images/page1--bg.jpg") no-repeat;
-	background-attachment: fixed;
-	background-position: top center; 
-	background-size: cover;
+	background-attachment: fixed !important;
+	background-position: top center !important; 
+	background-size: cover !important;
 	background-color:#ff6633;
+	// z-index:10;
 		.page1{
 			display: inline-block;
 			width: 1100px;
@@ -64,8 +110,7 @@
 			text-align:left;
 				.description__page{
 					display: inline-block;
-					float:left;
-					width:58%;
+					// width:58%;
 						h1{
 							color:#fff;
 							text-shadow: 0px 1px 3px #777;
@@ -81,17 +126,21 @@
 							text-shadow: 0px 1px 3px #444;
 						}
 				}
-				.ss__page{
-					display: inline-block;
-					float:right;
-					text-align:center; 
-					width:42%;
-					margin:6vh 0 0 0;
-						img{
-							max-width:100%;
-							height:auto;
-						}
-				}
+				// .ss__page{
+				// 	display: inline-block;
+				// 	float:right;
+				// 	text-align:center; 
+				// 	width:42%;
+				// 	margin:0 0 0 0;
+				// 	position: fixed;
+				// 	top: 50%;
+				// 	@include transform (translate(-50%, -50%));
+				// 	right:50%;left:50%;
+				// 		img{
+				// 			max-width:100%;
+				// 			height:auto;
+				// 		}
+				// }
 			
 		}
 }
@@ -100,65 +149,84 @@
 	min-width:100%;
 	height:100vh;
 	background:#fff;
+	// z-index:20;
 		.page2{
 			@extend .page1;
 				.description__page{
 						h1{
 							color:#424242;
-							text-shadow: 0px 1px 3px #777;
+							text-shadow: none;
 								// font{
 								// 	color:#ff6633;
-								// 	font-weight:800;
-								// 	text-decoration: underline;
-								// 	text-shadow: 0px 1px 1px #000;
 								// }
 						}
-				}
-				.ss__page{
+						p{
+							color:#797970;
+							text-shadow: none;
 
+						}
 				}
+				// .ss__page{
+
+				// }
 			
 		}
 }
 .page3__wrapper{
 	@extend .page1__wrapper;
 	background:#ff6633;
+	// z-index:30;
 		.page3{
 			@extend .page1;
 				.description__page{
+						h1{
+							color:#424242;
+							text-shadow: none;
+								font{
+									color:#fff;
+								}
+						}
+						p{
+							color:#6B2A11;
+							text-shadow: none;
+
+						}
 
 				}
-				.ss__page{
+				// .ss__page{
 
-				}
+				// }
 			
 		}
 }
 .page4__wrapper{
-	@extend .page1__wrapper;
+	@extend .page2__wrapper;
 	background:#fff;
+	// z-index:40;
 		.page4{
-			@extend .page1;
+			@extend .page2;
 				.description__page{
-
 				}
-				.ss__page{
+				// .ss__page{
 
-				}
+				// }
 			
 		}
 }
 .page5__wrapper{
 	@extend .page1__wrapper;
 	background:#272625;
+	// z-index:50;
 		.page5{
 			@extend .page1;
 				.description__page{
-
+						p{
+							color:#797970;
+						}
 				}
-				.ss__page{
+				// .ss__page{
 
-				}
+				// }
 			
 		}
 }
