--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -71,8 +71,9 @@ body {
   width:100%;
   min-height:100%;
     .main__Wrapper{
+      position: relative;
         .main{
-
+          position: relative;
         }
     }
 }
