--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -45,53 +45,38 @@
 				}
 		}
 }
-.ss__page{
-	max-width:180px;
-	height:200px;
-	top:50%;
-	@include transform (translate(-50%, -50%));
-	right:50%; left:50%;
-		&1{
-			background-image:("assets/images/frame_page1.png") no-repeat;			
-		}
+.ss__wrapper{
+	position:absolute !important;
+	top:0;
+	right:0;
+	padding-right:20px;
+	z-index:1;
+	.ss__page{
+		position:relative;
+		width:700px;
+		height:100vh;
+		margin:0 0 0 0;
+		padding:0;
+		background-attachment:fixed !important;
+		background-position: 85% 100% !important;
+		// background-size: 100% 100% !important;
+			&.ss__page1{
+				background:url("../images/frame_page1.png") no-repeat;
+			}
+			&.ss__page2{
+				background:url("../images/frame_page2.png") no-repeat;
+			}
+			&.ss__page3{
+				background:url("../images/frame_page3.png") no-repeat;
+			}
+			&.ss__page4{
+				background:url("../images/frame_page2.png") no-repeat;
+			}
+	}	
 }
-// .ss__wrapper{					
-// 		.ss__page{
-// 			position: fixed;
-// 			// width: 100vw !important;
-// 			// height:100vh !important;
-// 			width:42%;
-// 			margin:0 0 0 0;
-// 			top: 50%;
-// 			@include transform (translate(-50%, -50%));
-// 			right:50%;left:50%;	
-// 			// z-index:61;
-// 			background-attachment: fixed !important;
-// 			background-position: top center !important; 
-// 			background-size: cover !important;		
-// 				// &1{
-// 				// 	z-index: 11;
-// 				// }
-// 				// &2{
-// 				// 	z-index: 21;
-// 				// }
-// 				// &3{
-// 				// 	z-index: 31;
-// 				// }
-// 				// &4{
-// 				// 	z-index: 41;
-// 				// }
-// 				// &5{
-// 				// 	z-index: 51;
-// 				// }
-// 				img{
-// 					max-width:100%;
-// 					height:auto;
-// 				}
-// 		}
-// }
+
 .page1__wrapper{
-	position: relative;
+	position: relative !important;
 	min-width:100%;
 	height:100vh !important;
 	margin:0 0 0 0;
@@ -104,13 +89,16 @@
 	background-color:#ff6633;
 	// z-index:10;
 		.page1{
+			position: relative;
 			display: inline-block;
-			width: 1100px;
-			margin:20vh auto 0 auto;
+			height:100vh;
+			width: 960px;
+			margin:100px 0 0px 0;
 			text-align:left;
 				.description__page{
 					display: inline-block;
-					// width:58%;
+					float:left;
+					width:575px;
 						h1{
 							color:#fff;
 							text-shadow: 0px 1px 3px #777;
@@ -122,8 +110,9 @@
 								}
 						}
 						p{
-							width:90%;							
+							width:80%;							
 							text-shadow: 0px 1px 3px #444;
+							text-shadow:none;
 						}
 				}
 				// .ss__page{
