--- a/assets/sass/partials/_header.scss
+++ b/assets/sass/partials/_header.scss
@@ -5,7 +5,7 @@
   top:0;
   width:100%;
   height:auto;
-  padding:20px 0;
+  padding:5px 0 0 0;
   z-index: 100;
     .header{
       width:1100px;
@@ -20,7 +20,7 @@
           display:inline-block;
           width:100px;
           float:right;
-          margin:16px 0;
+          margin:8px 0 0 0;
             a.share--btn{
               display:table;
                 span.share--icon{
