--- a/assets/sass/core.scss
+++ b/assets/sass/core.scss
@@ -1,11 +1,6 @@
 // Reset
 @import "reset/normalize";
-
-// modules
-// @import "modules/breakpoint";
-// @import "modules/sprite";
-// @import "modules/color-palette";
-// @import "modules/animate";
+@import "modules/animate";
 // @import "modules/fonts";
 
 // partials
